src/main/java/com/example/restpolygon/error/exception/UserAlreadyExistsException.java
package com.example.restpolygon.error.exception;

public class UserAlreadyExistsException extends Exception {
	public UserAlreadyExistsException(String message) {
		super(message);
	}

}
